--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,3 +6,7 @@ controllers:
 
 api_login_check: 
     path: /api/login_check
+
+gesdinet_jwt_refresh_token:
+  path:       /token/refresh
+  controller: gesdinet.jwtrefreshtoken::refresh
