--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
         "gesdinet/jwt-refresh-token-bundle": "^1.3",
+        "guzzlehttp/guzzle": "^7.8",
         "lexik/jwt-authentication-bundle": "^2.20",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
