dev: added cors origin

--- a/.env
+++ b/.env
@@ -38,3 +38,7 @@ S3_KEY=your_access_key
 S3_SECRET=your_secret_key
 S3_REGION=your_region
 S3_BUCKET=your_bucket_name
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
