--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "gesdinet/jwt-refresh-token-bundle": "^1.3",
         "guzzlehttp/guzzle": "^7.8",
         "lexik/jwt-authentication-bundle": "^2.20",
+        "nelmio/cors-bundle": "^2.5",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
