--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,20 +25,17 @@ security:
         #     # https://symfony.com/doc/current/security/impersonating_user.html
         #     # switch_user: true
 
-        login:
-            pattern: ^/api/login
+        api:
+            pattern: ^/api
             stateless: true
+            entry_point: jwt
             json_login:
                 check_path: /api/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
-        api:
-            pattern: ^/api
-            stateless: true
             jwt: ~
-        refresh:
-            pattern:  ^/api/token/refresh
-            stateless: true
+            refresh_jwt:
+                check_path:  /api/token/refresh
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
