--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
+        "endroid/qr-code": "^6.0",
         "gesdinet/jwt-refresh-token-bundle": "^1.3",
         "guzzlehttp/guzzle": "^7.8",
         "lexik/jwt-authentication-bundle": "^2.20",
@@ -24,7 +25,8 @@
         "symfony/mime": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
-        "symfony/yaml": "7.0.*"
+        "symfony/yaml": "7.0.*",
+        "tecnickcom/tcpdf": "^6.7"
     },
     "config": {
         "allow-plugins": {
