dev(mail): ajout mailing + mail creation compte

--- a/.env
+++ b/.env
@@ -45,3 +45,7 @@ CORS_ALLOW_ORIGIN='^http?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 
 STRIPE_SECRET_KEY=sk_test_xxx
 STRIPE_WEBHOOK_SECRET=whsec_xxx
+
+###> symfony/mailer ###
+MAILER_DSN=null://null
+###< symfony/mailer ###
