--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 
 ###> symfony/framework-bundle ###
 /.env.local
+/.env.prod
 /.env.local.php
+/.env.prod.php
 /.env.*.local
+/.env.*.prod
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
