--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,12 @@
         "nelmio/cors-bundle": "^2.5",
         "stripe/stripe-php": "^15.5",
         "symfony/console": "7.0.*",
+        "symfony/doctrine-messenger": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
         "symfony/mailer": "7.0.*",
+        "symfony/messenger": "7.0.*",
         "symfony/mime": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
