--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,6 +1,6 @@
 nelmio_cors:
     defaults:
-        allow_origin: ['https://app.eccemissa.fr']
+        allow_origin: ['http://localhost:4200', 'https://app.eccemissa.fr']
         allow_credentials: true
         allow_headers: ['Content-Type', 'Authorization', 'X-Requested-With']
         expose_headers: ['Authorization']
@@ -8,7 +8,7 @@ nelmio_cors:
         max_age: 3600
     paths:
         '^/': # Appliquer à toutes les routes
-            allow_origin: ['https://app.eccemissa.fr']
+            allow_origin: ['http://localhost:4200', 'https://app.eccemissa.fr']
             allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
             allow_headers: ['Content-Type', 'Authorization', 'X-Requested-With']
             max_age: 3600
