--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
           echo "MAILER_DSN=${{ secrets.RECETTE_MAILER_DSN }}" >> .env.prod
 
       # Installer Composer
-      - name: /home/eccemiz/testapi  # Répertoire distant sur votre serveur OVH (généralement le dossier 'public_html')
-          passive: true   # Activez si nécessaire pour votre serveur FTP
+      - name: Install Composer
+        run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
       # Autres actions si nécessaires (exécuter les commandes Symfony pour la prod, par exemple)
       - name: Clear Symfony cache and run migrations
