--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,17 @@ jobs:
           php-version: '8.2'  # Remplacez par la version PHP que vous utilisez
           extensions: mbstring, xml, bcmath
 
+      # Déployer via FTP
+      - name: Deploy to OVH via FTP
+        uses: appleboy/ftp-action@v1.0.0
+        with:
+          host: ${{ secrets.OVH_FTP_HOST }}        # Ajoutez l'URL ou l'IP de votre serveur FTP OVH
+          username: ${{ secrets.OVH_FTP_USERNAME }}  # Ajoutez votre nom d'utilisateur FTP
+          password: ${{ secrets.OVH_FTP_PASSWORD }}  # Ajoutez votre mot de passe FTP
+          local-dir: ./   # Répertoire local à déployer, par exemple './' pour tout le projet
+          remote-dir: /home/eccemiz/testapi  # Répertoire distant sur votre serveur OVH (généralement le dossier 'public_html')
+          passive: true   # Activez si nécessaire pour votre serveur FTP
+
       # Créer un fichier .env.prod avec les valeurs nécessaires
       - name: Create .env.prod
         run: |
@@ -33,8 +44,11 @@ jobs:
           echo "MAILER_DSN=${{ secrets.RECETTE_MAILER_DSN }}" >> .env.prod
 
       # Installer Composer
-      - name: Install Composer
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+      - name: Install dependencies with Composer
+        run: |
+          cd /home/eccemiz/testapi
+          curl -sS https://getcomposer.org/installer | php
+          php composer.phar install --no-dev --optimize-autoloader
 
       # Autres actions si nécessaires (exécuter les commandes Symfony pour la prod, par exemple)
       - name: Clear Symfony cache and run migrations
