--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           username: ${{ secrets.OVH_FTP_USERNAME }}  # Nom d'utilisateur FTP
           password: ${{ secrets.OVH_FTP_PASSWORD }}  # Mot de passe FTP
           local-dir: ./  # Répertoire local à déployer
-          remote-dir: /path/to/your/public_html  # Répertoire distant sur votre serveur OVH
+          server-dir: /home/eccemiz/testapi  # Répertoire distant sur votre serveur OVH
           dry-run: false  # Déploiement réel, pas en mode simulation
 
 
