--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,10 @@ jobs:
         with:
           php-version: '8.2'  # Remplacez par la version PHP que vous utilisez
           extensions: mbstring, xml, bcmath
+      
+      - name: 'verif variables'
+        run: |
+          echo ${{ secrets.OVH_FTP_HOST }}
 
       # Déployer via FTP
       - name: Deploy to OVH via FTP
