--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,20 @@ on:
 
 jobs:
   deploy:
-    secrets: inherit
     runs-on: ubuntu-latest
+    env:
+      FTP_HOST: ${{ secrets.OVH_FTP_HOST }}
+
     steps:
+      - name: Debug secrets presence
+        run: |
+          if [ -z "${{ secrets.OVH_FTP_HOST }}" ]; then
+            echo "❌ Secret OVH_FTP_HOST est vide ou non défini"
+            exit 1
+          else
+            echo "✅ Secret OVH_FTP_HOST est bien défini"
+          fi
+
       # Vérifier le code source depuis GitHub
       - name: Checkout code PHp
         uses: actions/checkout@v2
