--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,18 +31,13 @@ jobs:
           server-dir: /testapi/  # Répertoire distant sur votre serveur OVH
           dry-run: false  # Déploiement réel, pas en mode simulation
 
-      # Installer Composer
-      - name: Install dependencies with Composer
-        run: |
-          cd testapi
-          curl -sS https://getcomposer.org/installer | php
-          php composer.phar install --no-dev --optimize-autoloader
-
       # Autres actions si nécessaires (exécuter les commandes Symfony pour la prod, par exemple)
-      - name: Clear Symfony cache - run migrations - create .env.prod
+      - name: Install Composer dependancies - Clear Symfony cache - Run migrations - Create .env.prod
         run: |
           ssh ${{ secrets.OVH_SSH_USER }}@${{ secrets.OVH_SSH_HOST }} << 'EOF'
             cd testapi
+            curl -sS https://getcomposer.org/installer | php
+            php composer.phar install --no-dev --optimize-autoloader
             echo "DATABASE_URL=${{ secrets.RECETTE_DATABASE_URL }}" >> .env.prod
             echo "S3_KEY=${{ secrets.RECETTE_S3_KEY }}" >> .env.prod
             echo "S3_SECRET=${{ secrets.RECETTE_S3_SECRET }}" >> .env.prod
