--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
       # Autres actions si nécessaires (exécuter les commandes Symfony pour la prod, par exemple)
       - name: Install Composer dependancies - Clear Symfony cache - Run migrations - Create .env.prod
         run: |
-          sshpass -p "${{ secrets.OVH_SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no -o PubkeyAuthentication=no -v -T ${{ secrets.OVH_SSH_USER }}@${{ secrets.OVH_SSH_HOST }} << 'EOF'
+          sshpass -p "${{ secrets.OVH_SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no -o PubkeyAuthentication=no -v -T ssh://${{ secrets.OVH_SSH_USER }}@${{ secrets.OVH_SSH_HOST }}:22 << 'EOF'
             cd testapi
             curl -sS https://getcomposer.org/installer | php
             php composer.phar install --no-dev --optimize-autoloader
