--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,9 @@ jobs:
       - name: Install Composer - Clear Symfony cache - Run migrations - Create .env.prod
         run: |
           sshpass -p "${{ secrets.OVH_SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no -o PubkeyAuthentication=no -v -T ssh://${{ secrets.OVH_SSH_USER }}@${{ secrets.OVH_SSH_HOST }}:22 << 'EOF'
+            
             alias php='/usr/local/php8.2/bin/php'
+            export PATH=/usr/local/php8.2/bin:$PATH
 
             cd /home/eccemiz/testapi
 
@@ -56,14 +58,15 @@ jobs:
 
             php composer.phar install
 
-            echo "DATABASE_URL=${{ secrets.RECETTE_DATABASE_URL }}" >> .env.prod
-            echo "S3_KEY=${{ secrets.RECETTE_S3_KEY }}" >> .env.prod
-            echo "S3_SECRET=${{ secrets.RECETTE_S3_SECRET }}" >> .env.prod
-            echo "S3_REGION=${{ secrets.RECETTE_S3_REGION }}" >> .env.prod
-            echo "S3_BUCKET=${{ secrets.RECETTE_S3_BUCKET }}" >> .env.prod
-            echo "STRIPE_SECRET_KEY=${{ secrets.RECETTE_STRIPE_SECRET_KEY }}" >> .env.prod
-            echo "STRIPE_WEBHOOK_SECRET=${{ secrets.RECETTE_STRIPE_WEBHOOK_SECRET }}" >> .env.prod
-            echo "MAILER_DSN=${{ secrets.RECETTE_MAILER_DSN }}" >> .env.prod
+            # Mettre à jour les informations de .env.prod
+            sed -i "s|^DATABASE_URL=.*|DATABASE_URL=${{ secrets.RECETTE_DATABASE_URL }}|" .env.prod
+            sed -i "s|^S3_KEY=.*|S3_KEY=${{ secrets.RECETTE_S3_KEY }}|" .env.prod
+            sed -i "s|^S3_SECRET=.*|S3_SECRET=${{ secrets.RECETTE_S3_SECRET }}|" .env.prod
+            sed -i "s|^S3_REGION=.*|S3_REGION=${{ secrets.RECETTE_S3_REGION }}|" .env.prod
+            sed -i "s|^S3_BUCKET=.*|S3_BUCKET=${{ secrets.RECETTE_S3_BUCKET }}|" .env.prod
+            sed -i "s|^STRIPE_SECRET_KEY=.*|STRIPE_SECRET_KEY=${{ secrets.RECETTE_STRIPE_SECRET_KEY }}|" .env.prod
+            sed -i "s|^STRIPE_WEBHOOK_SECRET=.*|STRIPE_WEBHOOK_SECRET=${{ secrets.RECETTE_STRIPE_WEBHOOK_SECRET }}|" .env.prod
+            sed -i "s|^MAILER_DSN=.*|MAILER_DSN=${{ secrets.RECETTE_MAILER_DSN }}|" .env.prod
             
             php bin/console cache:clear --env=prod
             php bin/console doctrine:migrations:migrate --env=prod
