--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,14 +59,14 @@ jobs:
             php composer.phar install
 
             # Mettre à jour les informations de .env.prod
-            sed -i "s#^DATABASE_URL=.*#DATABASE_URL=${{ secrets.RECETTE_DATABASE_URL }}#" .env.prod
+            sed -i "s#^DATABASE_URL=.*#DATABASE_URL=\"mysql://${{ secrets.RECETTE_DATABASE_USER }}:${{ secrets.RECETTE_DATABASE_PASSWORD }}@${{ secrets.RECETTE_DATABASE_HOST }}:${{ secrets.RECETTE_DATABASE_PORT }}/${{ secrets.RECETTE_DATABASE_NAME }}?serverVersion=8.0.32&charset=utf8mb4\"#" .env.prod
             sed -i "s#^S3_KEY=.*#S3_KEY=${{ secrets.RECETTE_S3_KEY }}#" .env.prod
             sed -i "s#^S3_SECRET=.*#S3_SECRET=${{ secrets.RECETTE_S3_SECRET }}#" .env.prod
             sed -i "s#^S3_REGION=.*#S3_REGION=${{ secrets.RECETTE_S3_REGION }}#" .env.prod
             sed -i "s#^S3_BUCKET=.*#S3_BUCKET=${{ secrets.RECETTE_S3_BUCKET }}#" .env.prod
             sed -i "s#^STRIPE_SECRET_KEY=.*#STRIPE_SECRET_KEY=${{ secrets.RECETTE_STRIPE_SECRET_KEY }}#" .env.prod
-            sed -i "s#^STRIPE_WEBHOOK_SECRET=.*#STRIPE_WEBHOOK_SECRET=${{ secrets.RECETTE_STRIPE_WEBHOOK_SECRET }}#" .env.prod
-            sed -i "s#^MAILER_DSN=.*#MAILER_DSN=${{ secrets.RECETTE_MAILER_DSN }}#" .env.prod
+            sed -i "s#^STRIPE_WEBHOOK_SECRET=.*#STRIPE_WEBHOOK_SECRET=${{ secrets.RECETTE_STRIPE_WEBHOOK_SECRET }}\"#" .env.prod
+            sed -i "s#^MAILER_DSN=.*#MAILER_DSN=\"${{ secrets.RECETTE_MAILER_DSN }}#" .env.prod
             
             php bin/console cache:clear --env=prod
             
