--- a/.github/workflows/run-messenger.yml
+++ b/.github/workflows/run-messenger.yml
@@ -1,6 +1,9 @@
 name: Run Messenger Every Minute
 
 on:
+  push:
+      branches:
+        - recette
   schedule:
     - cron: '*/1 * * * *'  # Exécuter toutes les minutes
   workflow_dispatch:  # Permet d'exécuter manuellement la tâche si nécessaire
