--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -44,6 +44,8 @@ security:
         - { path: ^/api/inscription, roles: PUBLIC_ACCESS }
         - { path: ^/webhook/stripe, roles: PUBLIC_ACCESS }
         - { path: ^/api/token/refresh, roles: PUBLIC_ACCESS }
+        - { path: ^/api/password-reset/request, roles: PUBLIC_ACCESS }
+        - { path: ^/api/password-reset/reset, roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
